MDEV-23439 Assertion size == space->size failed in buf_read_ahead_random

The debug assertion is bogus, and we had removed it in
commit b1ab211dee599eabd9a5b886fafa3adea29ae041 (MDEV-15053)
in the MariaDB Server 10.5 branch.

For a small data file, fil_space_extend_must_retry() would always
allocate a minimum size of 4*innodb_page_size.

It is possible that random read-ahead will be triggered for
a smaller file than this. In the observed case, the read-ahead
was triggered for a 6-page file that used ROW_FORMAT=COMPRESSED
with 8KiB page size. So, the desired file size was 49152 bytes,
but the actual size was 65536 bytes.